tests/cmp/dc-label-multiple-semicolons.trp
let val x = 10 raisedTo `<alice; bob; charlie>`
in printWithLabels x
end